--- a/wp-content-checklist/index.html
+++ b/wp-content-checklist/index.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>WP Content Checklist</title>
+    <style type="text/css">
+      * {
+        box-sizing: border-box;
+      }
+
+      html,
+      body {
+        padding: 0;
+        margin: 0;
+        background-color: white;
+        font-family: Roboto, Arial, _sans;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
